tests/parser/good/top_level_no_semicolons.hel
// @name top_level_no_semicolons
// @phase parser
// @expect success

a = 1
b: i32 = 2
