tests/parser/bad/array_missing_comma.hel
// @name array_missing_comma
// @phase parser
// @expect error

a = [1 2];
